[package]
name = "whiz"
version = "0.5.1-beta.1"
edition = "2021"
description = "Modern DAG/tasks runner for multi-platform monorepos."
license = "MPL-2.0"

[dependencies]
actix = "0.13.5"
ansi-to-tui = "4.0.1"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
dotenv-parser = "0.1.3"
globset = "0.4.14"
ignore = "0.4.22"
indexmap = { version = "2.2.6", features = ["serde"] }
# lade-sdk = { path = "../../github/lade/sdk"}
lade-sdk = "0.11.2"
openssl = { version = "0.10.66", features = ["vendored"] }
notify = "6.1.1"
path-absolutize = "3.1.1"
path-clean = "1.0.1"
regex = "1.10.5"
self_update = { version = "0.40.0", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "compression-zip-bzip2",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2.0"
subprocess = "0.2.9"
textwrap = "0.16.1"
tokio = { version = "1.38.0", features = ["full"] }
ratatui = "0.27.0"
url = "2.5.2"
assert_cmd = "2.0.14"
semver = "1.0.23"
shlex = "1.3.0"
termgraph = "0.4.0"
lazy_static = "1.5.0"
