[package]
name = "whiz"
version = "0.5.1-beta.1"
edition = "2021"
description = "Modern DAG/tasks runner for multi-platform monorepos."
license = "MPL-2.0"

[dependencies]
actix = "0.13.5"
ansi-to-tui = "4.1.0"
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
dotenv-parser = "0.1.3"
globset = "0.4.16"
ignore = "0.4.23"
indexmap = { version = "2.8.0", features = ["serde"] }
# lade-sdk = { path = "../../github/lade/sdk"}
lade-sdk = "0.11.5"
openssl = { version = "0.10.71", features = ["vendored"] }
notify = "7.0.0"
path-absolutize = "3.1.1"
path-clean = "1.0.1"
regex = "1.11.1"
self_update = { version = "0.42.0", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "compression-zip-bzip2",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2.0"
subprocess = "0.2.9"
textwrap = "0.16.2"
tokio = { version = "1.44.0", features = ["full"] }
ratatui = "0.27.0"
url = "2.5.4"
assert_cmd = "2.0.16"
semver = "1.0.26"
shlex = "1.3.0"
termgraph = "0.4.0"
lazy_static = "1.5.0"
